--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "echarts": "^5.3.3",
+    "element-ui": "^2.15.9",
     "postcss-px2rem": "^0.3.0",
     "vant": "^2.12.48",
     "vue": "^2.6.11",
