--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "element-ui": "^2.15.9",
     "postcss-px2rem": "^0.3.0",
     "vant": "^2.12.48",
-    "vue": "^2.6.11",
+    "vue": "2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -35,6 +35,6 @@
     "less-loader": "^5.0.0",
     "prettier": "^2.2.1",
     "vue-loader": "^9.9.5",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "2.6.11"
   }
 }
